# youtube-crawling

./: .env.example  .gitignore  CLAUDE.md  PAUSED_2026-04-30.md  README.md  RESUMED_2026-05-01.md  config.yaml  expect_customer_list.md  influencer_enriched.backup.csv  influencer_enriched.csv  influencer_real.csv  pyproject.toml  searched-list.md
data/: _legacy_enriched.csv  _mindful_enriched.csv  beatmakers_leads.csv  nutrition_all.csv  nutrition_all_enriched.csv
docs/: 2026-04-28_next_sweep_plan.md
my-data/: finance_all_enriched.csv  fitness.csv  fitness_all.csv  fitness_all_enriched.csv  meditation.csv  mindset.csv  productivity_all.csv  twitch_streamers_20260422_145817.csv
scripts/: apply_lifestyle_beatmakers_mappings.py  apply_mappings_2026-04-25.py  apply_mappings_2026-04-27.py  apply_mappings_2026-04-28.py  apply_mappings_2026-04-29.py  apply_mappings_2026-04-30.py  apply_mappings_2026-05-01.py  beatmakers_mapping.py  beatmakers_mapping_2026-04-25.py  beatmakers_mapping_2026-04-25_more.py  beatmakers_mapping_2026-04-25_v3.py  build_total.py  career_mapping.py  career_mapping_2026-04-25.py  career_mapping_2026-04-25_more.py  career_mapping_2026-04-25_v3.py  category_angles.py  category_split_mapping.py  discover_2026-04-27.py  discover_2026-04-27_more.py  discover_2026-04-28.py  discover_2026-04-28_meditation.py  discover_2026-04-29.py  discover_2026-04-29_extra.py  discover_2026-05-01.py  discover_more_2026-04-25.py  discover_new_channels_2026-04-25.py  discover_v3_2026-04-25.py  enrich_all_csvs.py  enrich_from_videos_2026-04-30.py  enrich_influencer_csv.py  (+45 more)
(+74 files in other folders)
